--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,28 +1,27 @@
 {
-    "name": "Ivy Examples",
+    "name": "QR Code Generator",
     "image": "mcr.microsoft.com/dotnet/sdk:9.0",
     "features": {},
+    "workspaceFolder": "/workspaces/Ivy-Examples/qrcoder",
     "postCreateCommand": "dotnet tool install -g Ivy.Console",
     "postStartCommand": "dotnet watch run",
     "forwardPorts": [5010],
     "portsAttributes": {
       "5010": {
-        "label": "Ivy",
+        "label": "QR Code Generator",
         "onAutoForward": "openPreview"
       }
     },
     "customizations": {
       "vscode": {
-        "settings": {
-          "dotnet.defaultSolution": "**/*.sln",
-          "terminal.integrated.shell.linux": "/bin/bash"
-        },
         "extensions": [
           "ms-dotnettools.csharp",
           "ms-vscode.powershell",
           "ms-dotnettools.csdevkit"
         ]
+      },
+      "codespaces": {
+        "openFiles": ["Apps/ProfileApp.cs"]
       }
     }
   }
-  
