--- a/.devcontainer/qcoder/devcontainer.json
+++ b/.devcontainer/qcoder/devcontainer.json
@@ -4,7 +4,7 @@
     "features": {},
     "workspaceFolder": "/workspaces/Ivy-Examples/qrcoder",
     "postCreateCommand": "dotnet tool install -g Ivy.Console",
-    "postStartCommand": "dotnet watch run",
+    "postStartCommand": "dotnet watch",
     "forwardPorts": [5010],
     "portsAttributes": {
       "5010": {
