--- a/aspose-barcode/AsposeBarCodeExample.csproj
+++ b/aspose-barcode/AsposeBarCodeExample.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
-    <RootNamespace>AsposeBarcodeDemo</RootNamespace>
+    <RootNamespace>AsposeBarCodeExample</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +15,7 @@
   
   
   <ItemGroup>
-     <PackageReference Include="Ivy" Version="1.0.110.0" />
+     <PackageReference Include="Ivy" Version="1.*" />
      <PackageReference Include="Aspose.BarCode" Version="24.8.0" />
   </ItemGroup>
   
