--- a/crm-vc/Vc.csproj
+++ b/crm-vc/Vc.csproj
@@ -11,9 +11,9 @@
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Assets/**/*" />
-    <ProjectReference Include="D:\Repos\_Ivy\Ivy-Framework\Ivy\Ivy.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Ivy" Version="1.*" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
