--- a/aspose-ocr/AsposeOcrExample.csproj
+++ b/aspose-ocr/AsposeOcrExample.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
-    <RootNamespace>Ivy.Aspose.OCR.Examples</RootNamespace>
+    <RootNamespace>AsposeOcrExample</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,7 +17,7 @@
   
   <ItemGroup>
     <PackageReference Include="Aspose.OCR" Version="25.9.0" />
-    <PackageReference Include="Ivy" Version="1.0.113.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
   </ItemGroup>
 
 </Project>
