--- a/aspose-words/AsposeWordsExample.csproj
+++ b/aspose-words/AsposeWordsExample.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
-    <RootNamespace>AsposeWords</RootNamespace>
+    <RootNamespace>AsposeWordsExample</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +14,7 @@
   </ItemGroup>
 <ItemGroup>
     <PackageReference Include="Aspose.Words" Version="25.9.0" />
-    <PackageReference Include="Ivy" Version="1.0.110.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Apps" />
