--- a/barcodelib/BarcodelibExample.csproj
+++ b/barcodelib/BarcodelibExample.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<RootNamespace>BarcodelibExample</RootNamespace>
+		<RootNamespace>BarcodeLibExample</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
