--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "QR Code Generator",
+    "name": "Ivy Examples",
     "image": "mcr.microsoft.com/dotnet/sdk:9.0",
     "features": {},
     "postCreateCommand": "dotnet tool install -g Ivy.Console",
