feat: rename files as an example

--- a/constructs/Dockerfile
+++ b/constructs/Dockerfile
@@ -9,17 +9,17 @@ ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
 # Copy and restore
-COPY ["Ivy.Examples.Constructs.csproj", "./"]
-RUN dotnet restore "Ivy.Examples.Constructs.csproj"
+COPY ["ConstructsExample.csproj", "./"]
+RUN dotnet restore "ConstructsExample.csproj"
 
 # Copy everything and build
 COPY . .
-RUN dotnet build "Ivy.Examples.Constructs.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "ConstructsExample.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # Publish stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "Ivy.Examples.Constructs.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=true
+RUN dotnet publish "ConstructsExample.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=true
 
 # Final runtime image
 FROM base AS final
@@ -31,4 +31,4 @@ ENV PORT=80
 ENV ASPNETCORE_URLS="http://+:80"
 
 # Run the executable
-ENTRYPOINT ["dotnet","./Ivy.Examples.Constructs.dll"]
+ENTRYPOINT ["dotnet","./ConstructsExample.dll"]
