--- a/barcodelib/BarcodelibExample.csproj
+++ b/barcodelib/BarcodelibExample.csproj
@@ -4,12 +4,11 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<RootNamespace>BarcodelibExample</RootNamespace>
+		<RootNamespace>BarcodeLibExample</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Ivy" Version="1.0.115" />
+		<PackageReference Include="Ivy" Version="1.*" />
 		<PackageReference Include="BarcodeLib" Version="3.1.5" />
-		<PackageReference Include="SkiaSharp" Version="3.119.1" />
 	</ItemGroup>
 </Project>
