--- a/aspose-words/AsposeWordsExample.csproj
+++ b/aspose-words/AsposeWordsExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>AsposeWordsExample</RootNamespace>
+    <UserSecretsId>c8c5288a-0945-4b1a-873a-a7459bbddc94</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
