--- a/csvhelper/CsvHelperExample.csproj
+++ b/csvhelper/CsvHelperExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>CsvHelperExample</RootNamespace>
+    <UserSecretsId>2c3dce6d-59f4-4d05-9059-b79f8f991669</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
