--- a/barcodelib/Dockerfile
+++ b/barcodelib/Dockerfile
@@ -9,17 +9,17 @@ ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
 # Copy and restore
-COPY ["BarcodeLibExample.csproj", "./"]
-RUN dotnet restore "BarcodeLibExample.csproj"
+COPY ["BarcodelibExample.csproj", "./"]
+RUN dotnet restore "BarcodelibExample.csproj"
 
 # Copy everything and build
 COPY . .
-RUN dotnet build "BarcodeLibExample.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "BarcodelibExample.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # Publish stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "BarcodeLibExample.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=true
+RUN dotnet publish "BarcodelibExample.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=true
 
 # Final runtime image
 FROM base AS final
@@ -31,4 +31,4 @@ ENV PORT=80
 ENV ASPNETCORE_URLS="http://+:80"
 
 # Run the executable
-ENTRYPOINT ["dotnet","./BarcodeLibExample.dll"]
+ENTRYPOINT ["dotnet","./BarcodelibExample.dll"]
