--- a/cronos/CronosExample.csproj
+++ b/cronos/CronosExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>CronosExample</RootNamespace>
+    <UserSecretsId>1a26be7b-2cb7-49fa-a0da-dda86a74209b</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
