--- a/diffplex/DiffPlexExample.csproj
+++ b/diffplex/DiffPlexExample.csproj
@@ -17,7 +17,7 @@
   
   <ItemGroup>
     <PackageReference Include="DiffPlex" Version="1.9.0" />
-    <PackageReference Include="Ivy" Version="1.0.115.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
   </ItemGroup>
   
 
