--- a/bogus/BogusExample.csproj
+++ b/bogus/BogusExample.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>BogusExample</RootNamespace>
+    <UserSecretsId>5d16e344-8e0e-4279-be26-b8755dced3a9</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
