chore: create dockerfile

--- a/closedxml/ClosedXmlExample.csproj
+++ b/closedxml/ClosedXmlExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>ClosedXmlExample</RootNamespace>
+    <UserSecretsId>1a406fe5-f5cf-40de-999a-299b8e06eca5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
