--- a/diffplex/DiffPlexExample.csproj
+++ b/diffplex/DiffPlexExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>DiffPlexExample</RootNamespace>
+    <UserSecretsId>bbdf9661-190d-40f1-ab73-6659b7dda2c6</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
