feat: set last ivy version 1.*

--- a/epplus/EPPlusExample.csproj
+++ b/epplus/EPPlusExample.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="8.2.0" />
-    <PackageReference Include="Ivy" Version="1.0.113.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
   </ItemGroup>
   
 
