--- a/exceldatareader/ExcelDataReaderExample.csproj
+++ b/exceldatareader/ExcelDataReaderExample.csproj
@@ -17,7 +17,7 @@
   <ItemGroup>
     <PackageReference Include="ExcelDataReader" Version="3.8.0" />
     <PackageReference Include="ExcelDataReader.DataSet" Version="3.8.0" />
-    <PackageReference Include="Ivy" Version="1.0.113.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="10.0.0-rc.1.25451.107" />
   </ItemGroup>
   
