--- a/fuzzysharp/FuzzySharpExample.csproj
+++ b/fuzzysharp/FuzzySharpExample.csproj
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="FuzzySharp" Version="2.0.2" />
-    <PackageReference Include="Ivy" Version="1.0.113.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
   </ItemGroup>
   
 
