--- a/github/GitHubExample.csproj
+++ b/github/GitHubExample.csproj
@@ -16,7 +16,7 @@
   
   
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.0.113.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
     <PackageReference Include="GitHub" Version="1.34.0" />
   </ItemGroup>
   
