feat: rename file as an example

--- a/handlebars-net/HandlebarsNetExample.csproj
+++ b/handlebars-net/HandlebarsNetExample.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>Ivy_HandleBars</RootNamespace>
+    <RootNamespace>HandlebarsNetExample</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
