--- a/handlebars-net/HandlebarsNetExample.csproj
+++ b/handlebars-net/HandlebarsNetExample.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Handlebars.Net" Version="2.1.6" />
     <PackageReference Include="Handlebars.Net.Helpers" Version="2.5.3" />
-    <PackageReference Include="Ivy" Version="1.0.110" />
+    <PackageReference Include="Ivy" Version="1.*" />
   </ItemGroup>
 
 </Project>
