--- a/HtmlAgilityPack/HtmlAgilityPackExample.csproj
+++ b/HtmlAgilityPack/HtmlAgilityPackExample.csproj
@@ -6,8 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
-    <RootNamespace>HtmlAgilityPackDemo</RootNamespace>
-    <AssemblyName>HtmlAgilityPackDemo</AssemblyName>
+    <RootNamespace>HtmlAgilityPackExample</RootNamespace>
+    <AssemblyName>HtmlAgilityPackExample</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
