Refactor Handlebars.Net (#265)
* feat: remove not needed files

* feat: rename file as an example

* feat: set Ivy last version 1.*

* feat: implement new simple example for package Handlebars.Net

* feat: set HandlebarsNetApp as default app

* feat: remove ProductListApp

* feat: implement better UI

* feat: add info about ivy and Handlebars.Net

* feat: add devcontainer.json for Handlebars.Net

* feat: add Codespaces link and use embed instead

* feat: create README.md

--- a/handlebars-net/HandlebarsNetExample.csproj
+++ b/handlebars-net/HandlebarsNetExample.csproj
@@ -4,13 +4,13 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>Ivy_HandleBars</RootNamespace>
+    <RootNamespace>HandlebarsNetExample</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Handlebars.Net" Version="2.1.6" />
     <PackageReference Include="Handlebars.Net.Helpers" Version="2.5.3" />
-    <PackageReference Include="Ivy" Version="1.0.110" />
+    <PackageReference Include="Ivy" Version="1.*" />
   </ItemGroup>
 
 </Project>
