--- a/ibannet/Dockerfile
+++ b/ibannet/Dockerfile
@@ -9,17 +9,17 @@ ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
 # Copy and restore
-COPY ["IbanApp.csproj", "./"]
-RUN dotnet restore "IbanApp.csproj"
+COPY ["IbanNetExample.csproj", "./"]
+RUN dotnet restore "IbanNetExample.csproj"
 
 # Copy everything and build
 COPY . .
-RUN dotnet build "IbanApp.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "IbanNetExample.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # Publish stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "IbanApp.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=true
+RUN dotnet publish "IbanNetExample.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=true
 
 # Final runtime image
 FROM base AS final
@@ -31,4 +31,4 @@ ENV PORT=80
 ENV ASPNETCORE_URLS="http://+:80"
 
 # Run the executable
-ENTRYPOINT ["dotnet","./IbanApp.dll"]
+ENTRYPOINT ["dotnet","./IbanNetExample.dll"]
