--- a/course-template/course-template.csproj
+++ b/course-template/course-template.csproj
@@ -23,16 +23,20 @@
     <ExistingGenerated Include="Generated/**/*.g.cs" />
   </ItemGroup>
 
-  <!-- Единое подключение всех сгенерированных .g.cs (без дублирования в таргетах) -->
-  <ItemGroup>
-    <Compile Include="Generated/**/*.g.cs" />
-  </ItemGroup>
-
   <!-- Полная генерация при первом запуске (если папка Generated отсутствует) -->
   <Target Name="GenerateMarkdownFull" BeforeTargets="CoreCompile"
           Condition="'@(ExistingGenerated)' == ''">
     <Exec Command="dotnet run --project &quot;$(MSBuildProjectDirectory)/Helpers/Generator/Generator.csproj&quot; -- convert &quot;$(MSBuildProjectDirectory)/Modules/*.md&quot; &quot;$(MSBuildProjectDirectory)/Generated&quot; &quot;$(MSBuildProjectFullPath)&quot;" />
+    <!-- Динамически добавляем сгенерированные файлы в Compile после генерации -->
+    <ItemGroup>
+      <Compile Include="Generated/**/*.g.cs" />
+    </ItemGroup>
   </Target>
+
+  <!-- Подключение существующих .g.cs файлов при обычной компиляции -->
+  <ItemGroup Condition="'@(ExistingGenerated)' != ''">
+    <Compile Include="Generated/**/*.g.cs" />
+  </ItemGroup>
 
   <!-- Инкрементальная генерация отключена в MSBuild: выполняется приложением через GenerationService.RegenerateSingleBlocking -->
 
