--- a/magick-net-q16-anycpu/MagickNetQ16AnyCpuExample.csproj
+++ b/magick-net-q16-anycpu/MagickNetQ16AnyCpuExample.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
-    <RootNamespace>MagickNetExample</RootNamespace>
+    <RootNamespace>MagickNetQ16AnyCpuExample</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Ivy" Version="1.*" />
-    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="13.6.0" />
+    <PackageReference Include="Magick.NET-Q16-AnyCPU" Version="14.9.0" />
   </ItemGroup>
 
 </Project>
