--- a/mimemapping/MimeMappingExample.csproj
+++ b/mimemapping/MimeMappingExample.csproj
@@ -14,11 +14,8 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="Ivy" Version="1.*" />
     <PackageReference Include="MimeMapping" Version="3.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="C:\git\Ivy-Interactive\Ivy-Framework\Ivy\Ivy.csproj" />
   </ItemGroup>
   
 </Project>
