feat: improve better logic for demo package miniexcel

--- a/miniexcel/MiniExcelExample.csproj
+++ b/miniexcel/MiniExcelExample.csproj
@@ -14,6 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Students.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Ivy" Version="1.0.113.0" />
     <PackageReference Include="MiniExcel" Version="1.41.4" />
   </ItemGroup>
