--- a/.devcontainer/ibannet/devcontainer.json
+++ b/.devcontainer/ibannet/devcontainer.json
@@ -21,7 +21,7 @@
         ]
       },
       "codespaces": {
-        "openFiles": ["Apps/IbanNetApp.cs"]
+        "openFiles": ["Apps/IbanNetDemoApp.cs"]
       }
     }
   }
