--- a/mapster/MapsterExample.csproj
+++ b/mapster/MapsterExample.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
-    <RootNamespace>Ivy.Mapster</RootNamespace>
+    <RootNamespace>MapsterExample</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,9 +16,8 @@
   
   
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.0.115.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
     <PackageReference Include="Mapster" Version="7.4.0" />
-    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
