--- a/mimemapping/MimeMappingExample.csproj
+++ b/mimemapping/MimeMappingExample.csproj
@@ -6,8 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
-    <RootNamespace>MimeMappingDemo</RootNamespace>
-    <UserSecretsId>86fa3307-a8e2-4d3e-afea-c1a1157ea90d</UserSecretsId>
+    <RootNamespace>MimeMappingExample</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,12 +15,7 @@
   
   <ItemGroup>
     <PackageReference Include="Ivy" Version="1.*" />
-    <PackageReference Include="MimeMapping" Version="2.0.0" />
+    <PackageReference Include="MimeMapping" Version="3.1.0" />
   </ItemGroup>
   
-  <ItemGroup>
-    <Folder Include="Apps" />
-    <Folder Include="Connections" />
-  </ItemGroup>
-
 </Project>
