--- a/newtonsoft-json/NewtonsoftJsonExample.csproj
+++ b/newtonsoft-json/NewtonsoftJsonExample.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
-    <RootNamespace>Ivy.Newtonsoft.Json</RootNamespace>
+    <RootNamespace>NewtonsoftJsonExample</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
