--- a/newtonsoft-json/NewtonsoftJsonExample.csproj
+++ b/newtonsoft-json/NewtonsoftJsonExample.csproj
@@ -13,16 +13,9 @@
     <EmbeddedResource Include="Assets/**/*" />
   </ItemGroup>
 
-  
-  
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.0.113.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
-  </ItemGroup>
-  
-
-  <ItemGroup>
-    <Folder Include="Connections" />
   </ItemGroup>
 
 </Project>
