--- a/squirrel/SquirrelExample.csproj
+++ b/squirrel/SquirrelExample.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
+    <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113;</NoWarn>
     <RootNamespace>SquirrelExample</RootNamespace>
   </PropertyGroup>
 
@@ -21,7 +21,10 @@
 
   <ItemGroup>
     <PackageReference Include="Ivy" Version="1.0.125.0" />
-    <PackageReference Include="TableAPI" Version="1.0.3" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="C:\git\Squirrel\Squirrel\Squirrel\Squirrel.csproj" />
   </ItemGroup>
   
   <ItemGroup>
