chore: update Ivy package reference in SquirrelExample.csproj to allow for any version

--- a/squirrel/SquirrelExample.csproj
+++ b/squirrel/SquirrelExample.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.0.125.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
   </ItemGroup>
   
   <ItemGroup>
