--- a/puppeteersharp/PuppeteerSharpExample.csproj
+++ b/puppeteersharp/PuppeteerSharpExample.csproj
@@ -6,21 +6,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
-    <RootNamespace>PuppeteerSharpDemo</RootNamespace>
+    <RootNamespace>PuppeteerSharpExample</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Assets/**/*" />
   </ItemGroup>
 
-  
-  
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.0.113.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
     <PackageReference Include="PuppeteerSharp" Version="20.2.2" />
   </ItemGroup>
   
-
   <ItemGroup>
     <Folder Include="Connections" />
     <Folder Include="Assets\" />
