feat: improve better UI

--- a/packages-demos/stripe-net/appsettings.json
+++ b/packages-demos/stripe-net/appsettings.json
@@ -2,5 +2,5 @@
   "Stripe": {
     "SecretKey": "<stripe key here>"
   },
-  "BaseURL": "http://localhost:5000/"
+  "BaseURL": "http://localhost:5010/stripe-net-example/"
 }
