--- a/packages-demos/stripe-net/StripeNetExample.csproj
+++ b/packages-demos/stripe-net/StripeNetExample.csproj
@@ -26,7 +26,7 @@
   
   
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.0.115.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
     <PackageReference Include="Stripe.net" Version="49.0.0" />
   </ItemGroup>
 
