--- a/packages-demos/superpower/SuperpowerExample.csproj
+++ b/packages-demos/superpower/SuperpowerExample.csproj
@@ -13,7 +13,7 @@
     <EmbeddedResource Include="Assets/**/*" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.0.118" />
+    <PackageReference Include="Ivy" Version="1.*" />
     <PackageReference Include="Superpower" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
