--- a/packages-demos/xlparser/XLParserExample.csproj
+++ b/packages-demos/xlparser/XLParserExample.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
-    <RootNamespace>XLParserDemo</RootNamespace>
+    <RootNamespace>XLParserExample</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
