--- a/packages-demos/stripe-net/StripeNetExample.csproj
+++ b/packages-demos/stripe-net/StripeNetExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>StripeNetExample</RootNamespace>
+    <UserSecretsId>c7976af6-719e-428c-a982-03528635d919</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
