--- a/packages-demos/stripe-net/StripeNetExample.csproj
+++ b/packages-demos/stripe-net/StripeNetExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,31 +6,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
-    <RootNamespace>StripPayment</RootNamespace>
+    <RootNamespace>StripeNetExample</RootNamespace>
+    <UserSecretsId>c7976af6-719e-428c-a982-03528635d919</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Assets/**/*" />
   </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="appsettings.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  
   
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.0.115.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
     <PackageReference Include="Stripe.net" Version="49.0.0" />
   </ItemGroup>
-
-  
   
   <ItemGroup>
     <Folder Include="Connections\" />
