--- a/packages-demos/opperai/OpperaiExample.csproj
+++ b/packages-demos/opperai/OpperaiExample.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.0.113.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
   </ItemGroup>
 
   <ItemGroup>
