--- a/packages-demos/zstring/ZStringExample.csproj
+++ b/packages-demos/zstring/ZStringExample.csproj
@@ -6,15 +6,18 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>IvyExamples.ZStringDemo</AssemblyName>
-    <RootNamespace>IvyExamples.ZStringDemo</RootNamespace>
+    <RootNamespace>ZStringExample</RootNamespace>
   </PropertyGroup>
+  
   <ItemGroup>
     <EmbeddedResource Include="Assets/**/*" />
   </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="Ivy" Version="1.0.113" />
     <PackageReference Include="ZString" Version="2.6.0" />
   </ItemGroup>
+  
   <ItemGroup>
     <Folder Include="Apps" />
     <Folder Include="Connections" />
