feat: update ZStringExample project configuration and remove unused screenshot asset

--- a/packages-demos/zstring/ZStringExample.csproj
+++ b/packages-demos/zstring/ZStringExample.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>IvyExamples.ZStringDemo</AssemblyName>
+    <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>ZStringExample</RootNamespace>
   </PropertyGroup>
   
