feat: update Ivy package version in ZStringExample project to allow for minor updates

--- a/packages-demos/zstring/ZStringExample.csproj
+++ b/packages-demos/zstring/ZStringExample.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.0.113" />
+    <PackageReference Include="Ivy" Version="1.*" />
     <PackageReference Include="ZString" Version="2.6.0" />
   </ItemGroup>
   
