feat: update package versions and improve API key handling in MicrosoftSemanticKernel

--- a/packages-demos/microsoft-semantickernel/MicrosoftSemanticKernelDemo.csproj
+++ b/packages-demos/microsoft-semantickernel/MicrosoftSemanticKernelDemo.csproj
@@ -18,8 +18,8 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.0.113" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="1.65.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.66.0" />
   </ItemGroup>
 
 </Project>
