--- a/packages-demos/questpdf/QuestPdfExample.csproj
+++ b/packages-demos/questpdf/QuestPdfExample.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
-    <RootNamespace>QuestPdfDemo</RootNamespace>
+    <RootNamespace>QuestPdfExample</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
