--- a/packages-demos/microsoft-semantickernel/MicrosoftSemanticKernelExample.csproj
+++ b/packages-demos/microsoft-semantickernel/MicrosoftSemanticKernelExample.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
-    <RootNamespace>MicrosoftSemanticKernelDemo</RootNamespace>
+    <RootNamespace>MicrosoftSemanticKernelExample</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,8 +18,8 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Ivy" Version="1.0.113" />
-    <PackageReference Include="Microsoft.SemanticKernel" Version="1.65.0" />
+    <PackageReference Include="Ivy" Version="1.*" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.66.0" />
   </ItemGroup>
 
 </Project>
