--- a/.github/workflows/update-project-catalog.yml
+++ b/.github/workflows/update-project-catalog.yml
@@ -24,6 +24,27 @@ jobs:
           chmod +x .github/scripts/generate-project-catalog.sh
           .github/scripts/generate-project-catalog.sh
 
+      - name: Update catalog-updates branch with main
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          BRANCH_NAME="catalog-updates"
+          git fetch origin main
+          
+          # Save the generated catalog file
+          cp Ivy-All-Projects.json Ivy-All-Projects.json.tmp
+          
+          # Create or checkout catalog-updates branch and merge main
+          if git show-ref --verify --quiet refs/remotes/origin/"$BRANCH_NAME"; then
+            git checkout -b "$BRANCH_NAME" origin/"$BRANCH_NAME" || git checkout "$BRANCH_NAME"
+            git merge origin/main --no-edit
+          else
+            git checkout -b "$BRANCH_NAME" origin/main
+          fi
+          
+          # Restore the generated catalog file
+          mv Ivy-All-Projects.json.tmp Ivy-All-Projects.json
+
       - name: Check for changes
         id: check-changes
         run: |
@@ -41,11 +62,7 @@ jobs:
       - name: Commit and push changes
         if: steps.check-changes.outputs.has-changes == 'true'
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          BRANCH_NAME="catalog-updates"
-          git checkout -b "$BRANCH_NAME" || git checkout "$BRANCH_NAME"
           git add Ivy-All-Projects.json
           git commit -m "chore: update project catalog [skip ci]"
-          git push origin "$BRANCH_NAME" --force
+          git push origin catalog-updates --force
 
