--- a/packages-demos/snowflake/SnowflakeExample.csproj
+++ b/packages-demos/snowflake/SnowflakeExample.csproj
@@ -16,6 +16,7 @@
   
     <ItemGroup>
       <PackageReference Include="Ivy" Version="1.1.1.0" />
+      <PackageReference Include="Snowflake.Data" Version="5.1.0" />
     </ItemGroup>
     
 
