--- a/project-demos/cold-call-tracker/ColdCallTracker.csproj
+++ b/project-demos/cold-call-tracker/ColdCallTracker.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>ColdCallTracker</RootNamespace>
+    <UserSecretsId>cffb27fc-46ea-43f1-a8e7-5defdd551160</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
