--- a/project-demos/cold-call-tracker/Dockerfile
+++ b/project-demos/cold-call-tracker/Dockerfile
@@ -10,16 +10,16 @@ WORKDIR /src
 
 # Copy and restore
 COPY ["IvyLeadGenerator.csproj", "./"]
-RUN dotnet restore "IvyLeadGenerator.csproj"
+RUN dotnet restore "ColdCallTracker.csproj"
 
 # Copy everything and build
 COPY . .
-RUN dotnet build "IvyLeadGenerator.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "ColdCallTracker.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # Publish stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "IvyLeadGenerator.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=true
+RUN dotnet publish "ColdCallTracker.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=true
 
 # Final runtime image
 FROM base AS final
@@ -31,4 +31,4 @@ ENV PORT=80
 ENV ASPNETCORE_URLS="http://+:80"
 
 # Run the executable
-ENTRYPOINT ["dotnet","./IvyLeadGenerator.dll"]
+ENTRYPOINT ["dotnet","./ColdCallTracker.dll"]
