chore: fix dockerfile

--- a/project-demos/cold-call-tracker/Dockerfile
+++ b/project-demos/cold-call-tracker/Dockerfile
@@ -9,7 +9,7 @@ ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
 # Copy and restore
-COPY ["IvyLeadGenerator.csproj", "./"]
+COPY ["ColdCallTracker.csproj", "./"]
 RUN dotnet restore "ColdCallTracker.csproj"
 
 # Copy everything and build
