--- a/packages-demos/fastmember/FastMemberExample.csproj
+++ b/packages-demos/fastmember/FastMemberExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>FastMemberExample</RootNamespace>
+    <UserSecretsId>84d22fcc-fe44-4dcb-81b1-4e810c6d77e2</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
