--- a/packages-demos/github/GitHubExample.csproj
+++ b/packages-demos/github/GitHubExample.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>GitHubExample</RootNamespace>
+    <UserSecretsId>6fd6ae0e-1fc7-4ca1-8347-c1445dbb5943</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
